# g13

./: .gitignore  CMakeLists.txt  GIT-VERSION-GEN  Makefile  README.md  g13.cc  g13.cpp  g13.h  g13.hpp  g13_action.cpp  g13_action.hpp  g13_device.cpp  g13_device.hpp  g13_fonts.cc  g13_fonts.cpp  g13_fonts.hpp  g13_hotplug.cpp  g13_hotplug.hpp  g13_keys.cc  g13_keys.cpp  g13_keys.hpp  g13_lcd.cc  g13_lcd.cpp  g13_lcd.hpp  g13_log.cc  g13_log.cp  g13_log.cpp  g13_log.hpp  g13_main.cc  g13_main.cpp  g13_manager.cpp  g13_manager.hpp  g13_profile.cpp  g13_profile.hpp  g13_stick.cc  g13_stick.cpp  g13_stick.hpp  g13_test.py  g13keys.def  helper.cpp  (+4 more)
systemd/: g13-clock.service
